# pacemaker-mgmt

./: .gitattributes  Makefile.am  bootstrap  configure.in  intltool-extract.in  intltool-merge.in  intltool-update.in
cim/: attrs_of_resource_provider.c  cluster_indication_provider.c  cluster_info.c  cluster_node_provider.c  cluster_provider.c  clustering_service_provider.c  cmpi_utils.c  colocation_constraint_provider.c  constraint_common.c  constraint_rule_provider.c  hosted_resource_provider.c  installed_software_provider.c  instance_attrs_provider.c  location_constraint_provider.c  masterslave_resource_provider.c  mgmt_client.c  mof_map.c  operation_on_provider.c  operation_provider.c  order_constraint_provider.c  participating_node_provider.c  primitive_resource_provider.c  resource_clone_provider.c  resource_common.c  resource_group_provider.c  rule_of_constraint_provider.c  simple_test.c  software_identity_provider.c  subresource_provider.c  utils.c
cim/mof/: Makefile.am
debian/: Makefile.am  changelog  control  copyright  pacemaker-mgmt-client.dirs  pacemaker-mgmt-client.install  pacemaker-mgmt-dev.dirs  pacemaker-mgmt-dev.install  pacemaker-mgmt.dirs  pacemaker-mgmt.files  pacemaker-mgmt.install  pacemaker-pygui.files  rules
doc/: AUTHORS  Makefile.am
include/: Makefile.am  pygui_internal.h
include/mgmt/: Makefile.am  mgmt_common.h
lib/: Makefile.am
lib/mgmt/: Makefile.am  mgmt_client_lib.c  mgmt_common_lib.c  mgmt_tls_lib.c  pymgmt.i
mgmt/: Makefile.am
mgmt/client/: Makefile.am  crm_gui.desktop.in  haclient.glade  haclient.py.in  haclient.zh_CN.po  mgmtcmd.py.in
mgmt/daemon/: Makefile.am  mgmt_crm.c  mgmt_hb.c  mgmt_internal.h  mgmt_lib.c  mgmt_lrm.c  mgmt_pacemaker_lrm.c  mgmtd.c  mgmtd.pam.common
po/: LINGUAS  POTFILES.in  haclient.pot  ja.po  zh_CN.po
replace/: alphasort.c  daemon.c  inet_pton.c  scandir.c  setenv.c  strerror.c  strlcat.c  strlcpy.c  strndup.c  strnlen.c  unsetenv.c  uuid_parse.c
snmp_subagent/: ClusterInfo.c  LHAClusterInfo.c  LHAHeartbeatConfigInfo.c  LHAIFStatusTable.c  LHAMembershipTable.c  LHANodeTable.c  LHAResourceGroupTable.c  LHAResourceStatusUpdate.c  LHAResourceTable.c  LINUX-HA-MIB.mib  Makefile.am  NodeTable.c  README  README.hbagent  README.hbagentv2  SNMPAgentSanityCheck.in  haclient.c  haclient.h  hasubagent.c  hbagent.c  hbagent.h  hbagentv2.c  hbagentv2.h  testclient.c
tsa_plugin/: dummy.c  ha_mgmt_client.c  ha_tsa_common.c  linuxha-adapter.in  tsa_eventd.c  tsa_hacli.c
